==> wagiminator/Development-Boards/STM32F030F4P6_DevBoard/software/stm32l010/serial/include/system.c <==
#include "system.h"

void CLK_init_HSI(void) {
  RCC->CR = RCC_CR_MSION                                  // keep MSI on
          | RCC_CR_HSION                                  // enable HSI
          | CLK_HSI_DIV;                                  // set HSI divider
  while(!(RCC->CR & RCC_CR_HSIRDY));                      // wait for HSI ready
  RCC->CFGR = 0b01;                                       // HSI as system clock source
  while((RCC->CFGR & RCC_CFGR_SWS_Msk) != (0b01<<2));     // wait until switched to HSI
  RCC->CFGR |= RCC_CFGR_STOPWUCK;                         // HSI for wake-up from STOP
}

void CLK_init_HSI_PLL(void) {
  RCC->CR = RCC_CR_MSION                                  // keep MSI on
          | RCC_CR_HSION;                                 // enable HSI
  while(!(RCC->CR & RCC_CR_HSIRDY));                      // wait for HSI ready
  RCC->CFGR = CLK_PLL_MUL | CLK_PLL_DIV;                  // set PLL factor and divider
  RCC->CR |= RCC_CR_PLLON;                                // enable PLL
  while(!(RCC->CR & RCC_CR_PLLRDY));                      // wait for PLL ready    
  RCC->CFGR |= 0b11;                                      // PLL as system clock source
  while((RCC->CFGR & RCC_CFGR_SWS_Msk) != (0b11<<2));     // wait until switched to PLL
  RCC->CFGR |= RCC_CFGR_STOPWUCK;                         // HSI for wake-up from STOP
}

void CLK_init_HSE_PLL(void) {
  RCC->CR = RCC_CR_MSION                                  // keep MSI on
          | RCC_CR_HSEON;                                 // enable HSE
  while(!(RCC->CR & RCC_CR_HSERDY));                      // wait for HSE ready
  RCC->CFGR = CLK_PLL_MUL | CLK_PLL_DIV                   // set PLL factor and divider
            | RCC_CFGR_PLLSRC;                            // set HSE as PLL source
  RCC->CR |= RCC_CR_PLLON;                                // enable PLL
  while(!(RCC->CR & RCC_CR_PLLRDY));                      // wait for PLL ready    
  RCC->CFGR |= 0b11;                                      // PLL as system clock source
  while((RCC->CFGR & RCC_CFGR_SWS_Msk) != (0b11<<2));     // wait until switched to PLL
}

void RTC_init(void) {
  RCC->APB1ENR |= RCC_APB1ENR_PWREN;    // enable low power control block clock
  PWR->CR  |= PWR_CR_DBP;               // enable access to RTC domain
  RCC->CSR |= RCC_CSR_LSION             // enable internal low-speed clock (LSI)
            | (0b10<<16)                // set LSI as clock source
            | RCC_CSR_RTCEN;            // enable RTC module clock
  RCC->APB1ENR &=~ RCC_APB1ENR_PWREN;   // disable low power control block clock
  RTC->WPR = 0xCA;                      // remove RTC register write protection
  RTC->WPR = 0x53;
  RTC_setPrescaler(73, 499);            // set prescaler (37kHz -> 1Hz)
}

void RTC_init_LSE(void) {
  RCC->APB1ENR |= RCC_APB1ENR_PWREN;    // enable low power control block clock
  PWR->CR  |= PWR_CR_DBP;               // enable access to RTC domain
  RCC->CSR |= RCC_CSR_LSEON             // enable external low-speed clock (LSE)
            | (0b01<<16)                // set LSE as clock source
            | RCC_CSR_RTCEN;            // enable RTC module clock
  RCC->APB1ENR &=~ RCC_APB1ENR_PWREN;   // disable low power control block clock
  RTC->WPR = 0xCA;                      // remove RTC register write protection
  RTC->WPR = 0x53;
}

void RTC_setPrescaler(uint8_t async, uint16_t sync) {
  RTC->ISR |= RTC_ISR_INIT;             // enter initialization mode
  while(!(RTC->ISR & RTC_ISR_INITF));   // wait until init mode is entered
  RTC->PRER = ((uint32_t)async << 16)
            | sync;
  RTC->ISR &= ~RTC_ISR_INIT;            // exit initialization mode
}

void LPT_init(void) {
  LSI_enable();                         // enable internal low-speed clock (LSI)
  RCC->APB1ENR |= RCC_APB1ENR_LPTIM1EN; // enable LPT module clock
  RCC->CCIPR   |= (uint32_t)0b01<<18;   // set LSI as LPT clock source
  LPTIM1->CFGR  = (uint32_t)0b101<<9;   // set prescaler to 32 (~1kHz)
  LPTIM1->CR    = LPTIM_CR_ENABLE;      // enable timer
}

void LPT_sleep(uint16_t ms) {
  LPT_shot(ms);                        // start low-power timer (LPT) single shot
  LPTIM1->IER  =  LPTIM_IER_ARRMIE;    // enable auto reload interrupt
  EXTI->EMR   |=  (uint32_t)1 << 29;   // enable wake up with event
  SLEEP_WFE_now();                     // put device into sleep, wake up by LPT event
  LPTIM1->ICR  =  LPTIM_ICR_ARRMCF;    // clear auto reload interrupt flag
  LPTIM1->IER &= ~LPTIM_IER_ARRMIE;    // disable auto reload interrupt
  EXTI->EMR   &= ~((uint32_t)1 << 29); // disable wake up with event
}
