==> wagiminator/Development-Boards/PY32F002AF15P_DevBoard/software/rtc/include/system.c <==
#include "system.h"

void CLK_init_HSI(void) {
  #if CLK_DIV > 0
  RCC->CR = CLK_DIV | RCC_RC_HSION;                       // set HSI divisor
  #endif
  RCC->ICSCR = (RCC->ICSCR & 0xFFFF0000) | CLK_MASK;      // set HSI freq and calibration
}

void CLK_init_HSI_PLL(void) {
  RCC->ICSCR = (RCC->ICSCR & 0xFFFF0000) | CLK_MASK;      // set HSI freq and calibration
  //RCC->PLLCFGR = RCC_PLLCFGR_PLLSRC_HSI;                // set HSI as source for PLL
  RCC->CR |= RCC_CR_PLLON;                                // Enable PLL
  while(!(RCC->CR & RCC_CR_PLLRDY));                      // Wait till PLL is ready      
  RCC->CFGR = 0b010;                                      // PLL as system clock source
  while((RCC->CFGR & RCC_CFGR_SWS_Msk) != RCC_CFGR_SWS_PLL); // Wait for PLL
}

void CLK_init_HSE_PLL(void) {
  RCC->ECSCR = (RCC->ECSCR & ~RCC_ECSCR_HSE_FREQ) | CLK_HSE_FREQ; // set frequency
  RCC->CR |= RCC_CR_HSEON;                                // Turn on HSE
  while(!(RCC->CR & RCC_CR_HSERDY));                      // wait till HSE is ready
  RCC->PLLCFGR = RCC_PLLCFGR_PLLSRC_HSE;                  // set HSE as source for PLL
  RCC->CR |= RCC_CR_PLLON;                                // Enable PLL
  while(!(RCC->CR & RCC_CR_PLLRDY));                      // Wait till PLL is ready      
  RCC->CFGR = 0b010;                                      // PLL as system clock source
  while((RCC->CFGR & RCC_CFGR_SWS_Msk) != RCC_CFGR_SWS_PLL); // Wait for PLL
}

void RTC_init(void) {
  LSI_enable();                         // enable internal low-speed clock (LSI)
  RCC->APBENR1 |= RCC_APBENR1_PWREN     // enable low power control block clock
                | RCC_APBENR1_RTCAPBEN; // enable RTC module clock
  PWR->CR1     |= PWR_CR1_DBP;          // enable access to RTC domain
  RCC->BDCR     = (0b10<<8)             // set LSI as clock source
                | RCC_BDCR_RTCEN;       // enable RTC
}

void RTC_init_LSE(void) {
  RCC->APBENR1 |= RCC_APBENR1_PWREN     // enable low power control block clock
                | RCC_APBENR1_RTCAPBEN; // enable RTC module clock
  PWR->CR1     |= PWR_CR1_DBP;          // enable access to RTC domain
  RCC->BDCR     = RCC_BDCR_LSEON        // turn on LSE
                | (0b01<<8)             // set LSE as clock source
                | RCC_BDCR_RTCEN;       // enable RTC
}

void RTC_setPrescaler(uint32_t val) {
  while(!(RTC->CRL & RTC_CRL_RTOFF));   // wait for ready to write
  RTC->CRL  = RTC_CRL_CNF;              // enter configuration mode
  RTC->PRLH = val >> 16;                // set prescaler (high value)
  RTC->PRLL = val & 0xffff;             // set prescaler (low value)
  RTC->CRL  = 0;                        // exit configuration mode -> write changes
}

void LPT_init(void) {
  LSI_enable();                         // enable internal low-speed clock (LSI)
  RCC->APBENR1 |= RCC_APBENR1_LPTIMEN;  // enable LPT module clock
  RCC->CCIPR   |= (uint32_t)0b01<<18;   // set LSI as LPT clock source
  LPTIM->CFGR   = (uint32_t)0b101<<9;   // set prescaler to 32 (~1kHz)
  LPTIM->IER    = LPTIM_IER_ARRMIE;     // set interrupt enable flag
  LPTIM->CR     = LPTIM_CR_ENABLE;      // enable timer
}

void LPT_sleep(uint16_t ms) {
  LPT_shot(ms);                         // start low-power timer (LPT) single shot
  SCB->SCR |=  SCB_SCR_SEVONPEND_Msk;   // enable wake-up on pending interrupt
  SLEEP_WFE_now();                      // put device into stop, wake up by LPT event
  SCB->SCR &= ~SCB_SCR_SEVONPEND_Msk;   // disable wake-up on pending interrupt
  LPTIM->ICR = LPTIM_ICR_ARRMCF;        // clear LPT interrupt flag
  NVIC_ClearPendingIRQ(LPTIM1_IRQn);    // clear NVIC pending interrupt flag
}
